Modificato Index.html con link sui due html

--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     <p>Uente 1: Riva Andrea</p>
     
     <p>Utente 2: Crippa Davide</p>
+
+    <a href="primo.html">Prima Pagina</a>
+    <a href="secondo.html">Seconda Pagina</a>
 </body>
 </html>
